# flask_simple_store

./: .gitignore  Dockerfile  README.md  README.rst  app.py  pyproject.toml  requirements.txt
models/: item_model.py  store_model.py  user_model.py
resources/: item.py  store.py  user.py
store/: __init__.py  celery_worker.py  config.py  extensions.py
store/api/: routes.py
store/api/models/: item_model.py  store_model.py  user_model.py
store/api/resources/: item.py  store.py  user.py
store/celery_mail/: routes.py
store/celery_mail/templates/: index.html
tests/: test_store.py
