[tool.poetry]
name = "store"
version = "2.0"
description = ""
authors = ["Tim Kormachev <wardruid@yandex.ru>"]

[tool.poetry.dependencies]
python = "^3.7"
werkzeug = "^0.15.4"
Flask = "^1.0"
Flask-RESTful = "^0.3.7"
Flask-JWT-extended = "^3.18"
Flask-SQLAlchemy = "^2.4"
Flask-Mail = "^0.9.1"
psycopg2 = "^2.8"
celery = "^4.3"
redis = "^3.2"

[tool.poetry.dev-dependencies]
pytest = "^3.0"
pylint = "^2.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
